--- a/src/app/base.css
+++ b/src/app/base.css
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: "Mona Sans";
-  font-weight: 200 900;
+  font-weight: 200 300 400 500 900;
   font-display: block;
   font-style: normal;
   font-stretch: 75% 125%;
